--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
-<!DOCTYPE html>
-<html lang="">
+<!doctype html>
+<html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/icon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Онлайн-бронирование кинотеатра</title>
+    <meta
+      name="description"
+      content="Бронируйте места в кинотеатрах онлайн и покупайте билеты быстро и удобно на Онлайн-бронирование кинотеатра!"
+    />
+    <meta property="og:title" content="Онлайн-бронирование кинотеатра" />
+    <meta
+      property="og:description"
+      content="Бронируйте места в кинотеатрах и покупайте билеты онлайн быстро и удобно!"
+    />
+    <meta
+      property="og:image"
+      content="https://online-cinema-booking.vercel.app/images/preview.jpg"
+    />
+    <meta
+      property="og:image:alt"
+      content="Превью сайта Онлайн-бронирование кинотеатра"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://online-cinema-booking.vercel.app/"
+    />
   </head>
   <body>
     <div id="app"></div>
